fixed overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@ html {
   /* Firefox */
   -ms-overflow-style: none;
   /* IE & Edge */
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
